# sei-chain

./: .dockerignore  .gitignore  .gitmodules  .gitpod.yml  .golangci.yml  .goreleaser.yaml  .touch_ci  AGENTS.md  BRANCH.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_0d2a66ab.md  CONTRIBUTING.md  Dockerfile  Dockerfile.seinet  Dockerfile.sf  LICENSE  LICENSE_Sovereign_Attribution  LICENSE_Sovereign_Attribution_v1.0.md  LISEZMOI.md  Makefile  PR_2731_REVIEW.md  PR_2802_REVIEW.md  PR_2862_REVIEW.md  README.md  README.sf.md  README_SeiKin_RFC_Attribution  README_SeiKin_RFC_Attribution.md  README_TODOs.md  REVIEW.md  RFC-002_SeiKinSettlement.md  RFC-003_Authorship_Licensing.md  RFC-004_Vault_Enforcement.md  RFC-005_Fork_Escrow_Terms.md  Royalty_Claim_SeiPay.md  SECURITY.md  SIP-EIP-2537-BLS.md  STO-558-round2-investigation.md  SUGGESTED_IMPROVEMENTS.md  SeiKinSeal.yaml  (+53 more)
.github/: CODEOWNERS  pr-summary.md
.run/: go build github.com_sei-protocol_sei-chain_cmd_seid.run.xml
.x402/: claim.yaml  receipts.json
LumenCardKit_v2.0/: LICENSE  README.md  fund_lumen_wallet.sh  generate_qr_code.py  lumen_checkout.py  receipts.json  requirements.txt  send_lumen_email.py  sunset_wallet.py  x402_auto_payout.py
aclmapping/: dependency_generator.go
admin/: config.go  config_test.go  server.go  server_test.go  service.go  service_test.go
api/: covenant_attestation.py
app/: abci.go  abci_test.go  ante.go  ante_test.go  app.go  app_inprocess.go  app_mev_test.go  app_test.go  benchmark.go  benchmark_buildtag.go  benchmark_buildtag_default.go  benchmark_hook_register.go  benchmark_profiling.go  benchmark_test.go  benchmark_tx_decode_test.go  check_total_block_gas_test.go  consensus_params_test.go  const.go  cosmos_checktx_test.go  encoding.go  eth_replay.go  execute_txs_fallback_test.go  execution.go  export.go  fork_manager.go  fork_manager_test.go  generator.go  genesis.go  giga_fallback_test.go  giga_static_test.go  graph.go  graph_test.go  invariance.go  invariance_test.go  metrics.go  metrics_test.go  mev.go  mock_balances_buildtag.go  mock_balances_buildtag_default.go  mock_balances_buildtag_test.go  (+32 more)
assets/: SoulBeaconRegistry.json
benchmark/: AGENTS.md  CLAUDE.md  benchmark-compare.sh  benchmark.sh
bundle/: CLAIM_SUMMARY.md  GITHUB_BUNDLE.txt  README.md  SHASUMS256.txt  sovereign_index.json  txids.csv
cache/: solidity-files-cache.json
claim_kin_agent_attribution/: __init__.py  github_helpers.py  settlement.py
clients/: wifiEntropy.ts
contracts/: .env.example  .gitignore  BLSCheck.sol  ContributorWallet  ERC20Mock.sol  ERC20WithMint.sol  EVMCaller.sol  KinVaultRoyaltyRouter.sol  README.md  SeiCCIPMessageDecoder.sol  SeiContribRouter  SeiKey  SoulSigilNFT.sol  hardhat.config.js  output.json  package-lock.json  package.json  tsconfig.json
cosmos-sdk/: codecov.yml
cosmovisor/: README.md
deploy/: deploy_seinet_safe.ts  msg_claim.mjs  msg_claim.ts
docker/: README.md  docker-compose.giga-mixed.yml  docker-compose.mev.yml  docker-compose.monitoring.yml  docker-compose.yml  (+1 more)
example/cosmwasm/cw1155/: Cargo.toml
example/cosmwasm/cw1155/artifacts/: checksums.txt  checksums_intermediate.txt  cwerc1155.wasm
example/cosmwasm/cw1155/src/: contract.rs  error.rs  msg.rs  querier.rs  state.rs
example/cosmwasm/cw721/: Cargo.toml
example/cosmwasm/cw721/artifacts/: checksums.txt  cwerc721.wasm
example/cosmwasm/cw721/src/: contract.rs  error.rs  lib.rs  msg.rs  querier.rs  state.rs
example/cosmwasm/iter/: Cargo.toml
example/cosmwasm/iter/artifacts/: checksums.txt  iter.wasm
example/cosmwasm/iter/src/: contract.rs  lib.rs  msg.rs
example/cosmwasm/seiwifiproof/: Cargo.toml
example/cosmwasm/seiwifiproof/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
loadtest/contracts/mars/: Cargo.toml
loadtest/contracts/mars/src/: contract.rs  msg.rs
nitro-replayer/: Cargo.toml
nitro-replayer/example/accounts/: 1  2  3  4  5  6  7  8  9
nitro-replayer/example/programs/: owner  program
nitro-replayer/example/txs/: tx
nitro-replayer/src/: bin.rs  lib.rs  replay.rs  structs.rs
nova/: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  __init__.py  config.yaml  install.sh  main.py  pyproject.toml  telegram.py  utils.py  validators.py
nova/.github/workflows/: ci.yml
nova/alerts/: __init__.py  router.py  telegram.py
nova/api/: __init__.py  __main__.py  server.py
nova/cli/: __init__.py  control.py
nova/config/: __init__.py  dev.yaml  loader.py  schema.yaml
nova/config/profiles/: pacific-1.validator.yaml
nova/core/: __init__.py  orchestrator.py  scheduler.py
nova/docs/: OPERATOR_HANDBOOK.md
nova/infra/: Dockerfile
nova/infra/docker/: Dockerfile
nova/infra/k8s/: nova-deployment.yaml
nova/infra/systemd/: nova.service
nova/logic/: __init__.py  risk.py
nova/security/: __init__.py  vault.py
nova/strategies/: __init__.py  yield_oracle.py
nova/tests/unit/: test_config_loader.py  test_orchestrator.py  test_risk_engine.py
nova/tools/: __init__.py  validate_config.py
nova/ui/dashboard/: __init__.py  __main__.py  app.py
nova/ui/dashboard/templates/: index.html
nova/utils/: logger.py  simple_yaml.py
nova/wallet/: __init__.py  manager.py  signer.py  vault_adapter.py
parallelization/wasm/: Cargo.toml
parallelization/wasm/artifacts/: checksums.txt  checksums_intermediate.txt  wasm.wasm
parallelization/wasm/src/: contract.rs  msg.rs
python/holo_protocol/: README.md  pyproject.toml
python/holo_protocol/src/holo_protocol/: __init__.py  alerts.py  cli.py  guardian.py  soulkey.py  totp.py
python/holo_protocol/src/holo_protocol/data/: sample_alerts.json  sample_transaction.json
python/holo_protocol/tests/: test_guardian.py  test_soulkey.py  test_totp.py
sei-wasmvm/libwasmvm/: Cargo.toml  build.rs  cbindgen.toml  clippy.toml
sei-wasmvm/libwasmvm/src/: api.rs  args.rs  cache.rs  calls.rs  db.rs  gas_meter.rs  gas_report.rs  iterator.rs  lib.rs  memory.rs  querier.rs  storage.rs  test_utils.rs  tests.rs  version.rs
sei-wasmvm/libwasmvm/src/error/: go.rs  mod.rs  rust.rs
sei-wasmvm/libwasmvm/src/examples/: wasmvmstatic.rs
(+13317 files in other folders)
