[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-sei"
version = "0.1.0"
description = "Validator-class autonomous compounding agent for the Sei network"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Nova Contributors" }]
license = { text = "Apache-2.0" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]
dependencies = [
  "click>=8.1",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "flask>=3.0"
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.4", "xgboost>=2.0"]

[project.scripts]
nova = "nova.cli.control:nova"

[tool.setuptools.packages.find]
where = ["."]
include = ["nova*"]
