[package]
name = "wasmvm"
version = "1.5.4"
publish = false
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "Go bindings for cosmwasm contracts"
repository = "https://github.com/CosmWasm/wasmvm"
license = "Apache-2.0"
readme = "README.md"
exclude = [".circleci/*", ".gitignore"]

[lib]
crate-type = ["cdylib", "rlib"]

# the example is to allow us to compile a muslc static lib with the same codebase as we compile the
# normal dynamic libs (best workaround I could find to override crate-type on the command line)
[[example]]
name = "wasmvmstatic"
path = "src/examples/wasmvmstatic.rs"
crate-type = ["staticlib"]

[features]
default = []
# This feature requires Rust nightly because it depends on the unstable backtrace feature.
backtraces = []

[dependencies]
cosmwasm-std = { git = "https://github.com/CosmWasm/cosmwasm.git", rev = "v1.5.7", features = [
  "staking",
  "stargate",
  "iterator",
] }
cosmwasm-vm = { git = "https://github.com/CosmWasm/cosmwasm.git", rev = "v1.5.7", features = [
  "staking",
  "stargate",
  "iterator",
] }
errno = "0.2"
serde_json = "1.0.91"
thiserror = "1.0.38"
hex = "0.4.3"
time = { version = "0.3.36", features = ["formatting"] }

[dev-dependencies]
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
tempfile = "3.4.0"

[build-dependencies]
cbindgen = "0.24.3"

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true
