[package]
name = "cwerc721"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = { version = "1.5.5", features = ["staking", "stargate"] }
cw-storage-plus = "1.2.0"
cw721 = "0.18.0"
cw721-base = { version = "0.18.0", features = ["library"] }
cw2981-royalties = "0.18.0"
cw721 = "0.18.0"
cw721-base = "0.18.0"
schemars = "0.8.16"
serde = "1.0.195"
thiserror = "1.0.56"
